--- a/index.html
+++ b/index.html
@@ -11,44 +11,47 @@
     <title>Hello, world!</title>
   </head>
   <body>
-    <h1>Hello, world!</h1>
+    
     <header>
-        <h1>Hello, world!</h1>
+        <h1>Hello, Mundo :v</h1>
     </header>
     <section>
-        <div class="row">
-            <div class="col-lg-12 col-md-12 col-sm-12 bg-success p-3 border border">HEADER</div>
-        </div>
-        <div class="row">
-            <div class="col-lg-2 col-md-2 col-sm-none bg-danger p-3 border border">NAV</div>
-            <div class="col-lg-10 col-md-10 col-sm-12">
-                <div class="row border border" >
-                    <div class="col-lg-12 col-md-12 col-sm-12 bg-primary p-3 border border">URL</div>
-                </div>
-                <div class="row border border">
-                    <div class="col-lg-6 col-md-12 col-sm-12 bg-success p-5  border border">BOX</div>
-                    <div class="col-lg-6 col-md-12 col-sm-12 bg-success p-5 border border">BOX</div>
-                </div>
+        <div class="container">
                 <div class="row">
-                    <div class="col-lg-2 col-md-4 col-sm-6  bg-light p-3 border border">Pequeños 1</div>
-                    <div class="col-lg-2 col-md-4 col-sm-6  bg-light p-3 border border">Pequeños 1</div>
-                    <div class="col-lg-4 col-md-4 col-sm-6  bg-light p-3 border border">Pequeños 1</div>
-                    <div class="col-lg-2 col-md-4 col-sm-6  bg-light p-3 border border">Pequeños 1</div>
-                    <div class="col-lg-2 col-md-4 col-sm-6  bg-light p-3 border border">Pequeños 1</div>
-                    <div class="col-lg-2 col-md-4 col-sm-6  bg-light p-3 border border">Pequeños 1</div>
-                    <div class="col-lg-2 col-md-4 col-sm-6  bg-light p-3 border border">Pequeños 1</div>
-                    <div class="col-lg-4 col-md-4 col-sm-6  bg-light p-3 border border">Pequeños 1</div>
-                    <div class="col-lg-2 col-md-4 col-sm-6  bg-light p-3 border border">Pequeños 1</div>
-                    <div class="col-lg-2 col-md-4 col-sm-6  bg-light p-3 border border">Pequeños 1</div>
-                </div>
-            </div>
+                        <div class="col-lg-12 col-md-12 col-sm-12 bg-primary p-4 border border">Cabeza</div>
+                    </div>
+                    <div class="row">
+                        <div class="col-lg-2 col-md-2 col-sm-2 bg-secondary  border border">Izquierda</div>
+                        <div class="col-lg-10 col-md-10 col-sm-10">
+                            <div class="row border border" >
+                                <div class="col-lg-12 col-md-12 col-sm-12 bg-primary p-2 border border">Derecha</div>
+                            </div>
+                            <div class="row border border">
+                                <div class="col-lg-6 col-md-12 col-sm-12 bg-secondary p-5  border border">Medio</div>
+                                <div class="col-lg-6 col-md-12 col-sm-12 bg-danger p-5 border border">Medio</div>
+                            </div>
+                            <div class="row">
+                                <div class="col-lg-2 col-md-4 col-sm-4  bg-primary p-4 border border">Pequeños </div>
+                                <div class="col-lg-2 col-md-4 col-sm-4  bg-primary p-4 border border">Pequeños </div>
+                                <div class="col-lg-4 col-md-4 col-sm-4  bg-primary p-4 border border">Pequeños </div>
+                                <div class="col-lg-2 col-md-4 col-sm-4  bg-primary p-4 border border">Pequeños </div>
+                                <div class="col-lg-2 col-md-4 col-sm-4  bg-primary p-4 border border">Pequeños </div>
+                                <div class="col-lg-2 col-md-4 col-sm-4  bg-primary p-4 border border">Pequeños 1</div>
+                                <div class="col-lg-2 col-md-4 col-sm-4  bg-primary p-4 border border">Pequeños 1</div>
+                                <div class="col-lg-4 col-md-4 col-sm-4  bg-primary p-4 border border">Pequeños 1</div>
+                                <div class="col-lg-2 col-md-4 col-sm-4  bg-primary p-4 border border">Pequeños 1</div>
+                                <div class="col-lg-2 col-md-4 col-sm-4  bg-primary p-4 border border">Pequeños 1</div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="row">
+                        <div class="col-lg-12 col-md-12 bg-danger  border border">FOOTER</div>
+                    </div>
         </div>
-        <div class="row">
-            <div class="col-lg-12 col-md-12 bg-success p-3 border border">FOOTER</div>
-        </div>
+        
     </section>
     <footer>
-        dsadsadas
+
     </footer>
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
